# shared-mem-ipc

./: CMakeLists.txt  README.md
src/: shmx_client.h  shmx_common.h  shmx_server.h
test/: test_client.cpp  test_inspector.cpp  test_server.cpp
